--- a/dia4/index.html
+++ b/dia4/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
- 
+  <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
 </body>
 <script src="./script.js"></script>
 </html>
