--- a/dia9/index.html
+++ b/dia9/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
- 
+  <p onClick="makeGreen()">×BREAK×DOWN×</p>
 </body>
 <script src="./script.js"></script>
 </html>
