--- a/dia16/index.html
+++ b/dia16/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
- 
+  <div class="hero">
+    <h1 contenteditable>🔥WOAH!</h1>
+  </div>
 </body>
 <script src="./script.js"></script>
 </html>
