--- a/dia17/index.html
+++ b/dia17/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
- 
+  <ul id="bands"></ul>
 </body>
 <script src="./script.js"></script>
 </html>
