--- a/dia20/index.html
+++ b/dia20/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
- 
+  <div class="words" contenteditable>
+  </div>
 </body>
 <script src="./script.js"></script>
 </html>
