--- a/dia21/index.html
+++ b/dia21/index.html
@@ -7,7 +7,11 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
- 
+  <img src="./img.svg" alt="">
+  <h1 class="speed">
+    <span class="speed-value">0</span>
+    <span class="units">KM/H</span>
+  </h1>
 </body>
 <script src="./script.js"></script>
 </html>
